# Chasing-Your-Tail-NG

./: BLACKHAT_ARSENAL.md  CLAUDE.md  README.md  alert_contract.py  alert_projection.py  alert_store.py  baseline_contract.py  baseline_result.py  baseline_store.py  bounded_gps_correlator.py  chasing_your_tail.py  gps_tracker.py  ground_truth_scenario_contract.py  ground_truth_summary_builder.py  kismet_eventbus_deployment.py  kismet_eventbus_entrypoint.py  kismet_eventbus_environment_credentials.py  kismet_eventbus_new_device_adapter.py  kismet_eventbus_observation_handler.py  kismet_eventbus_recovery_policy.py  kismet_eventbus_runtime.py  kismet_eventbus_runtime_config.py  kismet_eventbus_transport.py  kismet_packet_adapter.py  observation_contract.py  observation_correlation_planner.py  observation_location_link_orchestrator.py  observation_location_link_writer.py  observation_store.py  pyproject.toml  requirements.txt  route_session_contract.py  secure_database.py  secure_main_logic.py  session-ses_0fc6.md  session-ses_0fc7.md  session-ses_0fc8.md  session-ses_0fc9.md  surveillance_analyzer.py  surveillance_detector.py  (+2 more)
tests/: test_alert_contract.py  test_alert_projection.py  test_alert_store.py  test_alert_store_reads.py  test_baseline_contract.py  test_baseline_result.py  test_baseline_store.py  test_bounded_gps_correlator.py  test_evidence_language.py  test_gps_time_correlation.py  test_ground_truth_lab_adjacent_membership_restart_e2e.py  test_ground_truth_lab_constant_positive_time_offset_e2e.py  test_ground_truth_lab_duplicate_replay_idempotency_e2e.py  (+33 more)
